syntax = 'proto3';
package topology_requests;

import "topology.proto";

option java_package = "io.camunda.zeebe.topology.protocol";

message AddMembersRequest {
  repeated string memberIds = 1;
}

message RemoveMembersRequest {
  repeated string memberIds = 1;
}

message JoinPartitionRequest {
  string memberId = 1;
  int32 partitionId = 2;
  int32 priority = 3;
}

message LeavePartitionRequest {
  string memberId = 1;
  int32 partitionId = 2;
}

message ScaleRequest {
  repeated string memberIds = 1;
  bool dryRun = 2;
}

message ReassignAllPartitionsRequest {
  // The ids of the brokers to which all partitions should be re-distributed
  repeated string memberIds = 1;
}

message CancelTopologyChangeRequest {
  int64 changeId = 1;
}

message TopologyChangeResponse {
  int64 changeId = 1;
  map<string, topology_protocol.MemberState> currentTopology = 2;
  map<string, topology_protocol.MemberState> expectedTopology = 3;
  repeated topology_protocol.TopologyChangeOperation plannedChanges = 4;
}

message Response {
  oneof response {
    ErrorResponse error = 1;
    TopologyChangeResponse topologyChangeResponse = 2;
    topology_protocol.ClusterTopology clusterTopology = 3;
  }
}

message ErrorResponse {
  ErrorCode errorCode = 1;
  string errorMessage = 2;
}

enum ErrorCode {
  INVALID_REQUEST = 0;
  OPERATION_NOT_ALLOWED = 1;
  CONCURRENT_MODIFICATION = 2;
  INTERNAL_ERROR = 3;
}
